--- a/ray/docker-compose.yml
+++ b/ray/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   headnode:
     build:
       context: .
-      dockerfile: docker/Dockerfile.head
+      dockerfile: Dockerfile.head
     container_name: ray-head
     ports:
       - "6379:6379"   # Ray cluster communication
@@ -18,7 +18,7 @@ services:
   worker:
     build:
       context: .
-      dockerfile: docker/Dockerfile.worker
+      dockerfile: Dockerfile.worker
     depends_on:
       - headnode
     deploy:
@@ -31,7 +31,7 @@ services:
   client:
     build:
       context: .
-      dockerfile: docker/Dockerfile.client
+      dockerfile: Dockerfile.client
     depends_on:
       - headnode
     networks:
